[gd_scene load_steps=7 format=3 uid="uid://d1c7y2mi3gqhb"]

[ext_resource type="Script" path="res://Scenes/FruitTree/fruit_tree.gd" id="1_0l446"]
[ext_resource type="Texture2D" uid="uid://c0tj7i8qfmnsn" path="res://Sprites/Game_Sprites/fruit_tree1.png" id="1_0ps6k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7lwpi"]
size = Vector2(8, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_dg6kk"]
radius = 23.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dybkg"]
bg_color = Color(0.466667, 0.466667, 0.466667, 0.478431)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqsvp"]
bg_color = Color(0.870588, 0.486275, 0.141176, 1)

[node name="FruitTree" type="StaticBody2D"]
z_index = 2
script = ExtResource("1_0l446")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
texture = ExtResource("1_0ps6k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 18)
shape = SubResource("RectangleShape2D_7lwpi")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_dg6kk")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -17.0
offset_top = -34.0
offset_right = 18.0
offset_bottom = -29.0
theme_override_styles/background = SubResource("StyleBoxFlat_dybkg")
theme_override_styles/fill = SubResource("StyleBoxFlat_iqsvp")
rounded = true
show_percentage = false

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
